--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-
+        <!--对象存储minio-->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.4</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -144,7 +149,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.hllwz.stellartownserver.StellarTownServerApplication</mainClass>
-                    <skip>true</skip>
+<!--                    <skip>true</skip>-->
                 </configuration>
                 <executions>
                     <execution>
