--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,17 @@
             <artifactId>minio</artifactId>
             <version>8.5.4</version>
         </dependency>
+        <!--openai-->
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>client</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
