--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,14 @@ spring:
             hikari:
               minimum-idle: 5
               maximum-pool-size: 10
+        db_stellar_town_attraction:
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/db_stellar_town_attraction?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&collation=utf8_bin
+          username: root
+          password: root
+          hikari:
+            minimum-idle: 5
+            maximum-pool-size: 10
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
