fix: 修复文件上传失败问题 docs: 修改sql文件和yml文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,3 +65,7 @@ minio:
   accessKey: adminminio
   secretKey: adminminio
   bucketName: stellar-town
+#  endpoint: http://omks3oamocpy.xiaomiqiu.com
+#  accessKey: adminminio
+#  secretKey: adminminio
+#  bucketName: stellar-town
