fix: 修复post图片无法上传的问题

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,7 +73,7 @@ minio:
   accessKey: adminminio
   secretKey: adminminio
   bucketName: stellar-town
-#  endpoint: http://omks3oamocpy.xiaomiqiu.com
+#  endpoint: http://101.37.252.1:9999
 #  accessKey: adminminio
 #  secretKey: adminminio
 #  bucketName: stellar-town
